--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "@mantine/core": "7.12.2",
+    "@mantine/form": "^7.12.2",
     "@mantine/hooks": "7.12.2",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
+    "mathjs": "^13.1.1",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
